add button delete and not empty fields

--- a/src/app/components/child/child.component.html
+++ b/src/app/components/child/child.component.html
@@ -1,1 +1,5 @@
-<div *ngFor="let item of items">{{ item }}</div>
+<div *ngFor="let item of items">
+    {{ item }}
+<button (click)="isClick(item)">x</button>
+
+</div>
