add: button+style, click deleteItem, clear input after add

--- a/src/app/components/child/child.component.html
+++ b/src/app/components/child/child.component.html
@@ -1,1 +1,7 @@
-<div *ngFor="let item of items">{{ item }}</div>
+<div *ngFor="let item of items">{{ item }}
+  <button matSuffix mat-icon-button color="warn" (click)="deleteItem(item)" type="reset">
+    <i class="material-icons">
+      close
+    </i>
+  </button>
+</div>
