--- a/src/app/components/child/child.component.scss
+++ b/src/app/components/child/child.component.scss
@@ -1,5 +1,10 @@
-div{
-    padding: 15px;
-    margin: 20px;
-    border: 1px slategrey solid;
+div {
+  padding: 15px;
+  margin: 20px;
+  border: 1px slategrey solid;
+}
+
+button {
+  float: right;
+  margin: -10px -10px 0 0;
 }
