--- a/src/app/components/child/child.component.html
+++ b/src/app/components/child/child.component.html
@@ -1,4 +1,5 @@
-<div *ngFor="let item of items; let i = index">{{ item }}
+<div *ngFor="let item of items; let i = index" (mouseenter)="onVisible($event)"
+     (mouseleave)="onVisible($event)">{{ item }}
   <button matSuffix mat-icon-button color="warn" (click)="deleteItem(i)" type="reset">
     <i class="material-icons">
       close
