--- a/src/app/components/child/child.component.html
+++ b/src/app/components/child/child.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let item of items; let i = index" (mouseenter)="deleteButton($event)" (mouseleave)="deleteButton($event)">
+<div *ngFor="let item of items; let i = index" >
     {{ item }}
     <button (click)="isClick(i)">x</button>
 </div>
