--- a/src/app/components/child/child.component.html
+++ b/src/app/components/child/child.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let item of items; let i = index" (mouseenter)="onVisible($event)" (mouseleave)="onVisible($event)">
+<div *ngFor="let item of items; let i = index">
     {{ item }}
     <button matSuffix mat-icon-button color="warn" (click)="deleteItem(i)" type="reset">
         <i class="material-icons">
