--- a/src/app/components/child/child.component.scss
+++ b/src/app/components/child/child.component.scss
@@ -4,15 +4,10 @@ div{
     border: 1px slategrey solid;
 
 }
-div:hover{
-    padding: 15px;
-    margin: 20px;
-    border: 1px slategrey solid;
-    button{
+div:hover button{
         visibility:visible;
-        float: right;
     }
-}
+
 
 button{
     visibility: hidden;
