--- a/src/app/components/child/child.component.html
+++ b/src/app/components/child/child.component.html
@@ -1,4 +1,8 @@
-<div *ngFor="let item of items; let i = index" >
+<div *ngFor="let item of items; let i = index">
     {{ item }}
-    <button (click)="isClick(i)">x</button>
+    <button matSuffix mat-icon-button color="warn" (click)="isClick(i)" type="reset">
+        <i class="material-icons">
+            close
+        </i>
+    </button>
 </div>
