style: change background-color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,2 @@
-<mat-toolbar>
-    <span>Change Detection</span>
-</mat-toolbar>
-<div class="container">
-    <mat-card>
-        <mat-form-field class="example-full-width">
-            <input matInput placeholder="Add new item" maxlength="70" #text />
-        </mat-form-field>
-        <button mat-button (click)="addItem(text.value)">Add Item</button>
-    </mat-card>
-    <app-child [items]="items" (del)="del($event)"></app-child>
-</div>
+<app-toolbar></app-toolbar>
+
