--- a/src/app/components/smart/toolbar/toolbar.component.scss
+++ b/src/app/components/smart/toolbar/toolbar.component.scss
@@ -1,7 +1,7 @@
 mat-toolbar {
     width: 100%;
     height: 50px;
-    background: darkslategrey;
+    background: #333333;
 }
 
 button.mat-raised-button {
@@ -13,7 +13,7 @@ button.mat-raised-button {
 
 button {
     color: white;
-    background: darkslategrey;
+    background: #333333;
 }
 
 button:hover {
