--- a/src/app/components/smart/toolbar/toolbar.component.html
+++ b/src/app/components/smart/toolbar/toolbar.component.html
@@ -1,8 +1,15 @@
 <mat-toolbar>
     <mat-toolbar-row class="toolbar">
-        <button mat-raised-button color="">
-            <i class="material-icons"> menu </i>
-        </button>
+        <div class="firstToolbar">
+            <button mat-raised-button [matMenuTriggerFor]="menu">
+                <i class="material-icons"> menu </i>
+            </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item>Item 1</button>
+            <button mat-menu-item>Item 2</button>
+          </mat-menu>
+        </div>
+        <div class="secondToolbar"></div>
         <div class="thirdToolbar">
             <button mat-raised-button color="">
                 <i class="material-icons"> phone_forwarded </i>
