--- a/src/app/components/smart/toolbar/toolbar.component.scss
+++ b/src/app/components/smart/toolbar/toolbar.component.scss
@@ -1,31 +1,32 @@
 mat-toolbar {
-    width: 100%;
-    height: 50px;
-    background: #333333;
+  display: flex;
+  background: #333333;
 }
 
 button.mat-raised-button {
-    margin: 0 5px;
-    padding: 0;
-    min-width: 40px;
-    width: 40px;
+  margin: 0 5px;
+  padding: 0;
+  min-width: 40px;
+  width: 40px;
 }
 
-button {
-    color: white;
-    background: #333333;
+div button {
+  color: white;
+  background: #333333;
 }
 
-button:hover {
-    opacity: 0.7;
+div button:hover {
+  opacity: 0.7;
+}
+
+.firstToolbar {
+  flex-grow: 50;
 }
 
 .thirdToolbar {
-    position: fixed;
-    right: 100px;
+  flex-grow: 3;
 }
 
 .fourToolbar {
-    position: fixed;
-    right: 10px;
+  flex-grow: 1;
 }
