style: change background-color for button

--- a/src/app/components/smart/toolbar/toolbar.component.html
+++ b/src/app/components/smart/toolbar/toolbar.component.html
@@ -20,7 +20,7 @@
             <button mat-raised-button color="">
                 <i class="material-icons"> mic_none </i>
             </button>
-            <button mat-raised-button color="warn">
+            <button mat-raised-button class="warn">
                 <i class="material-icons"> call_end </i>
             </button>
         </div>
