add: app-toolbar to main-page

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,9 +1,9 @@
 .example-container {
     width: 100%;
     height: 100%;
-    margin: 0px;
+    margin: 0;
     border: 1px solid #555;
 }
 mat-drawer {
-    width: 20%;
+    width: 30%;
 }
