add: mat-tab link

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,7 @@
-<mat-drawer-container class="example-container">
+<app-toolbar></app-toolbar>
+<mat-drawer-container class="container">
     <mat-drawer mode="side" opened>Drawer content</mat-drawer>
-    <mat-drawer-content>Main content</mat-drawer-content>
+    <mat-drawer-content>
+        <app-main-tab></app-main-tab>
+    </mat-drawer-content>
 </mat-drawer-container>
