--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <app-toolbar></app-toolbar>
-<mat-drawer-container class="example-container">
+<mat-drawer-container class="container">
     <mat-drawer mode="side" opened>
       <app-sidebar></app-sidebar>
     </mat-drawer>
