--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,9 +1,8 @@
-.example-container {
+.container {
     width: 100%;
-    height: 100%;
+    min-height: 89%;
     margin: 0;
-    border: 1px solid #555;
 }
 mat-drawer {
-    width: 30%;
+    width: 25%;
 }
