add: client-component, service

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,5 +3,8 @@
     <mat-drawer mode="side" opened>
       <app-sidebar></app-sidebar>
     </mat-drawer>
-    <mat-drawer-content>Main content</mat-drawer-content>
+    <mat-drawer-content>
+      <app-client></app-client>
+
+    </mat-drawer-content>
 </mat-drawer-container>
