add: comment field to other components

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,5 +3,8 @@
     <mat-drawer mode="side" opened>Drawer content</mat-drawer>
     <mat-drawer-content>
         <app-main-tab></app-main-tab>
+        <div>
+            <app-comments></app-comments>
+        </div>
     </mat-drawer-content>
 </mat-drawer-container>
