--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,7 +1,11 @@
 .container {
-    width: 100%;
     min-height: 89%;
     margin: 0px;
+    padding-right: 5%;
+}
+div {
+    float: right;
+    overflow: auto;
 }
 mat-drawer {
     width: 25%;
