--- a/src/app/components/smart/comments/comments.component.html
+++ b/src/app/components/smart/comments/comments.component.html
@@ -1,9 +1,9 @@
 <div class="comments">
-  <mat-card class="card" *ngFor="let d of data">
+  <mat-card class="card" *ngFor="let comment of  comments$ | async">
       <mat-card-header>
-          <mat-card-title> {{ d.name }}</mat-card-title>
-          <mat-card-subtitle>{{ d.createdAt | date: 'medium' }}</mat-card-subtitle>
+          <mat-card-title> {{ comment?.name }}</mat-card-title>
+          <mat-card-subtitle>{{ comment?.createdAt | date: 'medium' }}</mat-card-subtitle>
         </mat-card-header>
-        <mat-card-content>{{ d.comment }}</mat-card-content>
+        <mat-card-content>{{ comment?.comment }}</mat-card-content>
   </mat-card>
 </div>
