--- a/src/app/components/smart/main-tab/main-tab.component.html
+++ b/src/app/components/smart/main-tab/main-tab.component.html
@@ -1,5 +1,5 @@
 <mat-tab-group animationDuration="0ms">
-    <mat-tab label="{{ VALIDATION }}"> Валидация</mat-tab>
-    <mat-tab label="{{ INITIALIZATION }}">Инициализация</mat-tab>
-    <mat-tab label="{{ WORK }}">Трудовая деятельность </mat-tab>
+    <mat-tab label="{{ tabsArr[0] }}">Валидация</mat-tab>
+    <mat-tab label="{{ tabsArr[1] }}">Инициализация</mat-tab>
+    <mat-tab label="{{ tabsArr[2] }}">Трудовая деятельность </mat-tab>
 </mat-tab-group>
