fix: get age move to helpers

--- a/src/app/components/smart/client/client.component.html
+++ b/src/app/components/smart/client/client.component.html
@@ -9,7 +9,7 @@
       </mat-card-header>
 
       <mat-card-content>
-        <span>Возраст: {{ birth }} </span>
+        <span>Возраст: {{ cl.age }} </span>
         <span>{{ cl.city?.toUpperCase() }}</span>
         <span>{{ cl.address?.toUpperCase() }}</span>
         <span class="status">{{ cl.session }}</span>
