--- a/src/app/components/smart/main-tab/main-tab.component.html
+++ b/src/app/components/smart/main-tab/main-tab.component.html
@@ -1,3 +1,5 @@
 <mat-tab-group animationDuration="0ms">
-    <mat-tab *ngFor="let tab of tabsArr" label="{{ tab }}">{{tab}} </mat-tab>
+    <mat-tab *ngFor="let tab of tabs" label="{{ tab }}">{{tab}} 
+            <app-labor-activity-form *ngIf="tab == 'Трудовая деятельность'"></app-labor-activity-form>
+    </mat-tab>
 </mat-tab-group>
