--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,9 +5,7 @@
     </mat-drawer>
     <mat-drawer-content>
         <app-client></app-client>
-        <app-main-tab></app-main-tab>
-        <div>
-            <app-comments></app-comments>
-        </div>
+        <section><app-main-tab></app-main-tab></section>
+        <aside><app-comments></app-comments></aside>
     </mat-drawer-content>
 </mat-drawer-container>
