--- a/src/app/components/smart/labor-activity-form/labor-activity-form.component.html
+++ b/src/app/components/smart/labor-activity-form/labor-activity-form.component.html
@@ -2,12 +2,12 @@
     <mat-form-field class="full-width">
         <mat-label>Тип занятости</mat-label>
         <mat-select formControlName="employment">
-            <mat-option value="{{ employment}}" *ngFor="let employment of employments"> {{ employment }} </mat-option>
+            <mat-option value="{{ employment }}" *ngFor="let employment of employments"> {{ employment }} </mat-option>
         </mat-select>
     </mat-form-field>
 
     <mat-form-field class="full-width">
-        <input matInput placeholder="Организация"  formControlName="position"/>
+        <input matInput placeholder="Организация" formControlName="position" />
     </mat-form-field>
     <mat-form-field class="full-width">
         <input matInput placeholder="Юридический адрес" formControlName="organizationAddress" />
@@ -49,7 +49,7 @@
     <mat-form-field class="full-width">
         <input matInput placeholder="Сайт" formControlName="site" />
     </mat-form-field>
-    <button mat-stroked-button (click)="save()">Сохранить</button>
-    <button mat-stroked-button (click)="cancel()">Отменить</button>
-    <button mat-stroked-button (click)="add()">Добавить</button>
+    <button mat-stroked-button (click)="saveLaborChanges()" [disabled]="buttonVisibility">Сохранить</button>
+    <button mat-stroked-button (click)="cancelLaborChanges()">Отменить</button>
+    <button mat-stroked-button (click)="addNewLabor()">Добавить</button>
 </form>
