refactor: union step & comment in store -> commentStep

--- a/src/app/components/smart/sidebar/step-item.component.html
+++ b/src/app/components/smart/sidebar/step-item.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group>
     <mat-tab label="Действия">
         <div *ngFor="let step of steps$ | async">
-            <span>{{ step.name }}</span>
+            <span>{{ step?.name }}</span>
         </div>
     </mat-tab>
 </mat-tab-group>
