--- a/src/app/components/smart/labor-activity-form/labor-activity-form.component.scss
+++ b/src/app/components/smart/labor-activity-form/labor-activity-form.component.scss
@@ -4,14 +4,14 @@
     min-width: 150px;
     max-width: 500px;
 }
-:host{
-  /deep/.mat-form-field-infix{
-    background: #edf1f6;
-    border-radius: 8px;
-    padding-left: 5px;
-    width: 100%;
-  }
-}
+//:host{
+//  /deep/.mat-form-field-infix{
+//    background: #edf1f6;
+//    border-radius: 8px;
+//    padding-left: 5px;
+//    width: 100%;
+//  }
+//}
 
 .full-width {
     width: 100%;
@@ -20,9 +20,15 @@
 td {
     padding-right: 8px;
 }
-tr{
-  width: 100%;
+tr {
+    width: 100%;
 }
-button {
-    margin: 10px 30px 0 0;
+button.mat-stroked-button {
+    margin: 10px 30px;
+}
+button.mat-button {
+    margin: 0;
+}
+.phoneInput {
+    width: 80%;
 }
