--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,24 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.rightList{
+  position: relative;
+  top: 0;
+  display: block;
+  float: right;
+  right: 0;
+  width: 350px;
+  height: 100%;
+  background-color: #eeeeee;
+}
+
+.leftList{
+  position: relative;
+  top: 0;
+  display: block;
+  float: left;
+  left: 0;
+  width: 350px;
+  height: 100%;
+}
