--- a/src/app/authorization/authorization.component.scss
+++ b/src/app/authorization/authorization.component.scss
@@ -5,7 +5,7 @@
     height: 300px;
     border: 1px solid darkgrey;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5)
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .contAuthForm {
@@ -17,6 +17,6 @@ mat-form-field {
     margin: 5px 60px;
 }
 .button {
-    margin:auto;
-    display:block;
+    margin: auto;
+    display: block;
 }
