--- a/src/app/operator-base/operator-base.component.html
+++ b/src/app/operator-base/operator-base.component.html
@@ -1,3 +1,3 @@
 <app-tool-bar-operator></app-tool-bar-operator>
-<app-side-bar-operator class="leftList"></app-side-bar-operator>
-<app-right-list class="rightList"></app-right-list>
+<app-side-bar-operator class="left-list"></app-side-bar-operator>
+<app-right-list class="right-list"></app-right-list>
