--- a/src/app/tool-bar-operator/tool-bar-operator.component.html
+++ b/src/app/tool-bar-operator/tool-bar-operator.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
   <mat-toolbar-row>
-    <mat-icon aria-hidden="false" aria-label="Example home icon" (mouseleave)="sideBarToggle()">home</mat-icon>
+    <mat-icon aria-hidden="false" (mouseleave)="sideBarToggle()">home</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
