--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.rightList{
+.right-list{
   position: relative;
   top: 0;
   display: block;
@@ -14,7 +14,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   background-color: #eeeeee;
 }
 
-.leftList{
+.left-list{
   position: relative;
   top: 0;
   display: block;
