--- a/src/app/authorization-page/authorization.component.html
+++ b/src/app/authorization-page/authorization.component.html
@@ -1,6 +1,6 @@
-<div class="contAuth">
+<div class="cont-auth">
     <form [formGroup]="authForm" (ngSubmit)="submit()">
-        <div class="contAuthForm">
+        <div class="cont-auth-form">
             <mat-form-field>
                 <mat-label>Login:</mat-label>
                 <input matInput class="login" type="text" formControlName="login" />
