--- a/src/app/authorization-page/authorization.component.scss
+++ b/src/app/authorization-page/authorization.component.scss
@@ -1,4 +1,4 @@
-.contAuth {
+.cont-auth {
     margin: auto;
     margin-top: 100px;
     width: 500px;
@@ -8,7 +8,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.contAuthForm {
+.cont-auth-form {
     display: flex;
     flex-direction: column;
     margin-top: 50px;
