--- a/src/app/pages/main-page/tool-bar-operator/tool-bar-operator.component.html
+++ b/src/app/pages/main-page/tool-bar-operator/tool-bar-operator.component.html
@@ -1,5 +1,14 @@
 <mat-toolbar>
   <mat-toolbar-row>
-    <mat-icon aria-hidden="false" (mouseleave)="sideBarToggle()">home</mat-icon>
+    <div (mouseleave)="sideBarToggle()">
+      <img class="icon-toolbar-menu" src="https://image.flaticon.com/icons/svg/148/148806.svg" />
+    </div>
+    <div class="user-section-toolbar">
+      <img class="icons-toolbar" src="https://image.flaticon.com/icons/svg/149/149071.svg" />
+      <div class="text-info-toolbar">
+        <div class="name-user-toolbar">User Name</div>
+        <div class="status-user-toolbar">Готов</div>
+      </div>
+    </div>
   </mat-toolbar-row>
 </mat-toolbar>
