Добавлена секция с комментариями

--- a/src/app/components/dumb/tool-bar-operator/tool-bar-operator.component.html
+++ b/src/app/components/dumb/tool-bar-operator/tool-bar-operator.component.html
@@ -6,7 +6,7 @@
     <div class="user-section-toolbar">
       <img class="icons-toolbar" src="https://image.flaticon.com/icons/svg/149/149071.svg" />
       <div class="text-info-toolbar">
-        <div class="name-user-toolbar">User Name</div>
+        <div class="name-user-toolbar">{{userName}}</div>
         <div class="status-user-toolbar">Готов</div>
       </div>
     </div>
