--- a/src/app/components/smart/authorization/authorization.component.html
+++ b/src/app/components/smart/authorization/authorization.component.html
@@ -11,6 +11,6 @@
                 <input matInput class="password" type="password" formControlName="password" />
             </mat-form-field>
         </div>
-        <button mat-raised-button color="accent" class="button" routerLink="/operator" routerDirection="forward">Отправить</button>
+        <button mat-raised-button color="accent" class="button">Отправить</button>
     </form>
 </div>
