--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   width: 350px;
   height: 100%;
   background-color: #eeeeee;
+  overflow: hidden;
 }
 
 .left-list{
@@ -21,5 +22,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   float: left;
   left: 0;
   width: 350px;
+  height: 100%;
+}
+
+.app-comment{
+  position: relative;
+  display: block;
+  width: 100%;
   height: 100%;
 }
