add info client

--- a/src/app/pages/main-page/operator-base/operator-base.component.html
+++ b/src/app/pages/main-page/operator-base/operator-base.component.html
@@ -1,3 +1,6 @@
 <app-tool-bar-operator></app-tool-bar-operator>
+<div class="info-client">
+    <app-info-client></app-info-client>
+</div>
 <app-side-bar-operator class="left-list"></app-side-bar-operator>
 <app-right-list class="right-list"></app-right-list>
