--- a/src/app/pages/main-page/operator-base/operator-base.component.scss
+++ b/src/app/pages/main-page/operator-base/operator-base.component.scss
@@ -1,1 +1,9 @@
-
+.info-client {
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    background-color: rgb(87, 82, 82);
+}
+.right-list {
+    margin-top: 200px;
+}
