--- a/src/app/components/dumb/side-bar-operator/side-bar-operator.component.html
+++ b/src/app/components/dumb/side-bar-operator/side-bar-operator.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="example-container">
-    <mat-sidenav mode="side" [opened]="sideWorks">
+    <mat-sidenav [opened]="sideWorks" mode="side">
         <mat-list>
             <mat-list-item>Item 1</mat-list-item>
             <mat-divider></mat-divider>
