--- a/src/app/components/dumb/info-client/info-client.component.html
+++ b/src/app/components/dumb/info-client/info-client.component.html
@@ -1,5 +1,5 @@
-<div class="info-client" *ngIf="client">
-    <img class="avatar" [src]="client.avatar" alt="альтернативный текст" />
+<div *ngIf="!!client" class="info-client">
+    <img [src]="client.avatar" class="avatar" />
     <h3 class="full-name">{{ client.firstName }} {{ client.lastName }}</h3>
     <span class="age"><b>DoB</b>: {{ client.age }}</span>
     <span class="location"><b>City</b>: {{ client.city }}, <b>Address</b>: {{ client.address }}</span>
