--- a/src/app/components/dumb/comment/comment.component.html
+++ b/src/app/components/dumb/comment/comment.component.html
@@ -1,22 +1,21 @@
 <div>
-  <form [formGroup]="commentForm" (ngSubmit)="submit()">
-      <mat-form-field class="commentInputBox" appearance="fill">
-        <mat-label>Напишите комментарий:</mat-label>
-        <input matInput type="text" formControlName="comment" />
-      </mat-form-field>
-  </form>
+    <form [formGroup]="commentForm" (ngSubmit)="submit()">
+        <mat-form-field class="commentInputBox" appearance="fill">
+            <mat-label>Напишите комментарий:</mat-label>
+            <input matInput type="text" formControlName=commentEnum.COMMENT" />
+        </mat-form-field>
+    </form>
 </div>
 <div class="comments-list">
-<mat-card *ngFor="let comment of commentList$ | async" class="comment-card" >
-  <mat-card-header>
-    <mat-card-title>Сообщение системы</mat-card-title>
-  </mat-card-header>
-  <mat-card-subtitle>{{ comment.createdAt | date }}</mat-card-subtitle>
-  <mat-card-content>
-    <p>
-      {{ comment.comment }}
-    </p>
-  </mat-card-content>
-</mat-card>
+    <mat-card *ngFor="let comment of commentList$ | async" class="comment-card">
+        <mat-card-header>
+            <mat-card-title>Сообщение системы</mat-card-title>
+        </mat-card-header>
+        <mat-card-subtitle>{{ comment.createdAt | date }}</mat-card-subtitle>
+        <mat-card-content>
+            <p>
+                {{ comment.comment }}
+            </p>
+        </mat-card-content>
+    </mat-card>
 </div>
-
