--- a/src/app/components/dumb/comment/comment.component.html
+++ b/src/app/components/dumb/comment/comment.component.html
@@ -2,7 +2,7 @@
     <form [formGroup]="commentForm" (ngSubmit)="submit()">
         <mat-form-field class="commentInputBox" appearance="fill">
             <mat-label>Напишите комментарий:</mat-label>
-            <input matInput type="text" formControlName=commentEnum.COMMENT" />
+            <input matInput type="text" formControlName="commentEnum.COMMENT" />
         </mat-form-field>
     </form>
 </div>
