--- a/src/app/components/dumb/info-client/info-client.component.html
+++ b/src/app/components/dumb/info-client/info-client.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!!client" class="info-client">
+<div *ngIf="client$ | async as client" class="info-client">
     <img [src]="client.avatar" class="avatar" />
     <h3 class="full-name">{{ client.firstName }} {{ client.lastName }}</h3>
     <span class="age"><b>DoB</b>: {{ client.age }}</span>
