--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,14 +5,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .right-list{
   position: relative;
-  top: 0;
+  background-color: #fcfcfc;
   display: block;
+  top: 0;
   float: right;
   right: 0;
   width: 350px;
   height: 100%;
-  background-color: #eeeeee;
-  overflow: hidden;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .left-list{
