--- a/src/app/components/dumb/task/task.component.html
+++ b/src/app/components/dumb/task/task.component.html
@@ -1,2 +1,2 @@
 <app-tool-bar-operator></app-tool-bar-operator>
-<button mat-raised-button (click)="getTask()" color="accent" class="button">Получить задание</button>
+<button mat-raised-button (click)="sendRequest()" color="accent" class="button">Получить задание</button>
