--- a/src/app/components/dumb/comment/comment.component.html
+++ b/src/app/components/dumb/comment/comment.component.html
@@ -13,10 +13,10 @@
 </div>
 <div class="comments-list">
     <mat-card *ngFor="let comment of commentList$ | async" class="comment-card">
-        <mat-card-header>
+        <mat-card-title-group>
             <mat-card-title>Сообщение системы</mat-card-title>
-        </mat-card-header>
-        <mat-card-subtitle>{{ comment.createdAt | date }}</mat-card-subtitle>
+            <mat-card-subtitle>{{ comment.createdAt | date }}</mat-card-subtitle>
+        </mat-card-title-group>
         <mat-card-content>
             <p>
                 {{ comment.comment }}
