--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   width: 100%;
   height: 100%;
 }
+
+mat-card-header-text {
+  /* CSS styles go here */
+  margin: 0; // for example to remove the margin
+}
