Добавлены табы и исправлен сайд бар

--- a/src/app/components/dumb/tool-bar-operator/tool-bar-operator.component.html
+++ b/src/app/components/dumb/tool-bar-operator/tool-bar-operator.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <mat-toolbar-row>
-    <div (mouseleave)="sideBarToggle()">
+    <div (click)="sideBarToggle()">
       <img class="icon-toolbar-menu" src="https://image.flaticon.com/icons/svg/148/148806.svg" />
     </div>
     <div class="user-section-toolbar">
