--- a/src/app/components/dumb/comment/comment.component.scss
+++ b/src/app/components/dumb/comment/comment.component.scss
@@ -10,9 +10,8 @@
 
 .comments-list {
     display: block;
-    min-height: 50%;
+    max-height: 35vh;
     overflow-y: scroll;
-    height: 60%;
 }
 
 .input-icon {
