--- a/src/app/pages/main-page/operator-base/operator-base.component.scss
+++ b/src/app/pages/main-page/operator-base/operator-base.component.scss
@@ -5,5 +5,11 @@
     background-color: rgb(87, 82, 82);
 }
 .right-list {
-    margin-top: 200px;
+    margin-top: 0;
+}
+
+app-operator-main-tabs{
+  position: relative;
+  display: block;
+  margin-top: 200px;
 }
