Добавлен таб контактность

--- a/src/app/components/dumb/comment/comment.component.html
+++ b/src/app/components/dumb/comment/comment.component.html
@@ -1,6 +1,6 @@
 <div>
     <form [formGroup]="commentForm" (ngSubmit)="submit()">
-        <mat-form-field class="commentInputBox" appearance="outline">
+        <mat-form-field class="comment-input-box" appearance="outline">
             <img
                 (click)="submit()"
                 matSuffix
