--- a/src/app/components/dumb/tool-bar-operator/tool-bar-operator.component.scss
+++ b/src/app/components/dumb/tool-bar-operator/tool-bar-operator.component.scss
@@ -64,8 +64,8 @@ span {
   align-items: center;
   margin-right: 15px;
   height: 100%;
-  min-width: 150px;
-  padding-left: 35px;
+  padding: 0 1em;
+  max-width: 20em;
 }
 
 .user-section-toolbar:hover{
