--- a/src/app/pages/main-page/operator-base/operator-base.component.html
+++ b/src/app/pages/main-page/operator-base/operator-base.component.html
@@ -1,8 +1,9 @@
 <app-tool-bar-operator></app-tool-bar-operator>
-<div class="info-client">
-  <app-operator-main-tabs></app-operator-main-tabs>
-    <app-info-client></app-info-client>
-  <app-right-list class="right-list"></app-right-list>
-</div>
 <app-side-bar-operator class="left-list"></app-side-bar-operator>
-
+<div class="info-client">
+    <app-info-client></app-info-client>
+</div>
+<div class="flex-tabs">
+    <app-operator-tabs></app-operator-tabs>
+</div>
+<app-right-list class="right-list"></app-right-list>
