--- a/src/app/pages/main-page/operator-base/operator-base.component.scss
+++ b/src/app/pages/main-page/operator-base/operator-base.component.scss
@@ -5,11 +5,16 @@
     background-color: rgb(87, 82, 82);
 }
 .right-list {
-    margin-top: 0;
+    margin-top: 250px;
 }
 
-app-operator-main-tabs{
-  position: relative;
-  display: block;
-  margin-top: 200px;
+app-operator-tabs {
+    position: relative;
+    display: block;
+    margin-top: 200px;
+}
+
+.flex-tabs {
+    position: absolute;
+    width: 100%;
 }
