--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   height: 100%;
 }
 
+app-contact-tab{
+  position: relative;
+  display: flex;
+}
+
